src/bin/loadzone/tests/correct/ttl1.db
$ORIGIN ttl1.
; this needs #2500
;@			IN SOA	ns hostmaster (
@			IN SOA	ns.ttl1. hostmaster.ttl1. (
				1        ; serial
				3600
				1800
				1814400
				3
				)
; this needs #2390
;			NS	ns
			NS	ns.ttl1.
ns			A	10.53.0.1
a			TXT	"soa minttl 3"
b		2	TXT	"explicit ttl 2"
c			TXT	"soa minttl 3"
$TTL 1
d			TXT	"default ttl 1"
e		4	TXT	"explicit ttl 4"
f			TXT	"default ttl 1"
