src/bin/loadzone/tests/error/formerr5.db
$TTL 2M
$ORIGIN com.
@			IN SOA	ns hostmaster (
				1        ; serial
				3600
				1800
				1814400
				3600
				)
			NS	ns
ns			A	127.0.0.1 ; ip value
b               "no type error!"
a			A	10.0.0.1
